12/21/23
	-Added VOLLEY sound
	-Optimization in SUpdateMenuCursorPos, particularly around the sound effect logic
	-Added dead and blight sounds
12/??/23
	-Relocated fight strings to R bank, so there is only one basic attack message needed for all players and enemies.
6/9/24
	-Fixed bug where riposte messages used the attack flavor of the current battler, even though the target is initiating the attack
	-Fixed bug where campfire strings read as KNOWN CAMP instead of CAMP LEAVE
	-Fixed bug where playing the "tink" sound would prevent a shield from ever breaking
	-Fixed bug where X SHOT A VOLLEY message would use the Y HP message component

KNOWN BUGS:
	-Lich dying to blight caused party viewed info corruption

TODO:
	Shortlist:
	-Implement all enemy special abilities
		-ARMOR (revive sword and shield, otherwise cast SHARP?)
		-HORROR (attack, attack + sleep, attack + blight, attack + mp sap?)
		-Add messages to support these abilities...
	-Connect visual and sound effects
	-Change constants in Lich special to be immediates

	Longlist:
	-Being guarded reduces blight damage, fix?
	-Sharp increases attack power of unconscious party members
	-Consider methods for compacting sound frequency & length data

	Dreamlist:
	-Variable pitch for certain sound effects (e.g. hit, heal, down)

	Additional sounds to consider:
		-Monster roar near exit
		-Enter battle sound
		-Level up jingle
		-Battle victory jingle
		-Game victory jingle
		-Game over jingle
		-Going down stairs sound?

	DOESN'T REQUIRE LOGIC:
		-More text/messaging work
		-Improve font
		-Improve in-maze campfire graphics to look less squished when they appear
		-Create all enemy graphics
		-Tune all enemy AI tables
		-Tune all enemy stats
			-Attack, magic, speed, HP, experience
		-Pick all enemy resistances
		-Tune all enemy colors
		-Tune all encounter tables
		-Tune spell mana costs
		-Tune maze exit tables
		-Tune encounter rate
		-Tune all visual effects
		-Create all sound effects